--- a/index.html
+++ b/index.html
@@ -82,21 +82,21 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+								<a class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 								<h3>Phage isolation</h3>
 								<p>During my Masters, I isolated a polyvalent phage and characterized structural (TEM), molecular and burst kinetic properties.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+								<a class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 								<h3>Codon bias; Biofilm formation</h3>
 								<p>I investigated the physiological implication of changing codon usage patterns and characterized biofilm formation at the air-liquid interface in <i>P. fluorescens</i>.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+								<a class="image featured"><img src="images/pic06.jpg" alt="" /></a>
 								<h3>Bacterial adaptation</h3>
 								<p>In my current project, I am investigating the adaptation of bacteria to fluctuating conditions. I am also developing analysis pipelines using R and bash for RNAseq and ChIPseq data.</p>
 							</article>
@@ -114,19 +114,19 @@
 				<div class="row">
 					<div class="col-4 col-6-medium col-12-small">
 						<article class="box style2">
-							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+							<a class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 							<h3>Bharatnatyam</h3>
 						</article>
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
 						<article class="box style2">
-							<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+							<a class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 							<h3>Avid reader</h3>
 						</article>
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
 						<article class="box style2">
-							<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+							<a class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 							<h3>Cooking</h3>
 						</article>
 					</div>
