--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							<header>
 								<h2>Hi there! I'm Anuradha Mukherjee.</h2>
 							</header>
-							<p>I am an evolutionary biologist interested in molecular mechanisms and population dynamics underlying the adaptation of bacterial communities to heterogeneous environments</a>.</p>
+							<p>I am an evolutionary biologist interested in molecular mechanisms and population dynamics underlying the adaptation of bacterial communities to heterogeneous environments. Find out more about some of my projects at <a href="https://orcid.org/0000-0002-4120-6596" target="_blank">ORCiD Researcher Profile</a>.</p>
 						</div>
 					</div>
 				</div>
@@ -67,9 +67,6 @@
 							</section>
 						</div>
 					</div>
-					<footer>
-						<a href="https://pure.mpg.de/pubman/faces/ViewItemFullPage.jsp?itemId=item_3187304" target="_blank" class="button large scrolly">Find out more about my doctoral work.</a>					
-					</footer>
 				</div>
 			</article>
 
