--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 					<div class="col-4 col-6-medium col-12-small">
 						<article class="box style2">
 							<a class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-							<h3><a href="https://anuradhamukherjee.me/foodlab" target="_blank">Cooking</a></h3>
+							<h3><a href="https://anuradhamukherjee.xyz/foodlab" target="_blank">Cooking</a></h3>
 						</article>
 					</div>
 				</div>
