--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 					<div class="col-4 col-6-medium col-12-small">
 						<article class="box style2">
 							<a class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-							<h3>Avid reader</h3>
+							<h3><a href="https://www.goodreads.com/enthu_cutlet" target="_blank">Avid Reader</a></h3>
 						</article>
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
